# clouptimizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  setup.py
requirements/: aws.txt  azure.txt  base.txt  gcp.txt  prod.txt
src/analysis/: advanced_optimization.py  data_transfer.py  quick_wins.py  reserved_instances.py  tagging_compliance.py  trend_forecasting.py
src/api/: app.py
src/cli/: main.py
src/cli/commands/: analyze.py  configure.py  optimize.py  report.py  scan.py
src/collectors/specialized/: dynamodb_collector.py  efs_collector.py  elasticache_collector.py  lambda_collector.py  rds_collector.py  s3_collector.py
src/core/: config.py  exceptions.py  logging.py  monitoring.py  multi_account.py  security.py  validation.py
src/core/base/: __init__.py  analyzer.py  cloud_provider.py  collector.py  optimizer.py  resource.py
src/core/orchestrator/: workflow_engine.py
src/providers/aws/: client.py
src/providers/aws/collectors/: ec2_collector.py
src/remediation/: auto_remediation.py
src/reporting/: executive_dashboard.py
tests/: conftest.py  test_validation.py
